# instaviz

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
instaviz/: __init__.py  __main__.py  web.py
instaviz/static/: json2html.css  node.js  prism.css  prism.js
instaviz/templates/: home.html
