[build-system]
requires = ["flit", "bottle", "jinja2"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "instaviz"
author = "Anthony Shaw"
author-email = "anthonyshaw@apache.org"
home-page = "https://github.com/tonybaloney/instaviz"
classifiers = ["License :: OSI Approved :: Apache Software License"]

