[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "instaviz"
readme = "README.md"
author = "Anthony Shaw"
author-email = "anthonyshaw@apache.org"
home-page = "https://github.com/tonybaloney/instaviz"
classifiers = ["License :: OSI Approved :: Apache Software License"]
requires = ["bottle", "jinja2", "pygments"]
